Collapse columns on header.php and footer.php to match margin of initial view. Fix logo class.

--- a/_src/scss/theme/components/_branding.scss
+++ b/_src/scss/theme/components/_branding.scss
@@ -10,10 +10,10 @@
 			   background-position: left center;
 			   background-repeat: no-repeat;
 			   background-size: contain;
-			   display: inline-block;
-			   min-height: 90px;
+			//    display: inline-block;
 			   width: 100%;
-			   text-indent: -9999px;
+			//    text-indent: -9999px;
+			text-decoration: none;
 		   }
 	   }
 
