--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1346,7 +1346,7 @@ h6 { font-size: 1.25rem; }
 /* ========== THEME ========== */
 .branding .logo h1 { overflow: hidden; }
 
-.branding .logo h1 a { background-position: left center; background-repeat: no-repeat; -webkit-background-size: contain; background-size: contain; display: inline-block; min-height: 90px; width: 100%; text-indent: -9999px; }
+.branding .logo h1 a { background-position: left center; background-repeat: no-repeat; -webkit-background-size: contain; background-size: contain; width: 100%; text-decoration: none; }
 
 .button { -webkit-appearance: none; background-color: #00cf91; border: none; color: #143241; cursor: pointer; display: inline-block; margin-top: 1em; padding: 0.5em 1em; text-decoration: none; -webkit-transition: all 0.25s ease-out; transition: all 0.25s ease-out; }
 
